--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-sussy
+<!DOCTYPE html>
+<html>
+   <head><meta charset="utf-8">
+      <title>Discord</title>
+      <meta http-equiv = "refresh" content = "2; url = https://discord.com/invite/nhhw2gn7Ss" />
+   </head>
+   <body>
+      <p>You will be redirected.</p>
+   </body>
+</html>
