--- a/status.html
+++ b/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head><meta charset="utf-8">
-      <title>Discord</title>
+      <title>Status</title>
       <meta http-equiv = "refresh" content = "0; url = https://stats.uptimerobot.com/QR6YvTXLZZ" />
    </head>
    <body>
